src/stylesheets/app.css
/* =========
Your custom styles go here
 ========= */

 /* Default Status bar background */
.statusbar-overlay {

    background: #333;
    /* We can add transition for smooth color animation */
    -webkit-transition: 400ms;
    transition: 400ms;
}
 
/* Change Status bar background when panel opened */
body.with-panel-left-cover .statusbar-overlay {
    background: white;
}       

.wifi-network-row {
	/*padding-left: 15px;*/
	width: 100%;
}

.wifi-network-row:after {
    content: "";
    display: block;
    width: 100%;
    /*border-bottom: 0.5px solid #ccc;*/
}

.wifi-network-icons-col {
	display: flex;
	height: 43px;
	align-items: center;
	justify-content: flex-end;
}
.wifi-network-container {
	width: 100%;
	display: flex;
}
.wifi-name {
	flex: 0 0 80%;
}
.filler {
	flex-grow: 1;
}
.wifi-link-container {
	/*flex: 0 0 20%;*/
}

.wifi-name input {
	height: 100%!important;
}
.wifi-name input[disabled] {
	opacity: 1;
}
.wifi-connected-icon {
	font-size: 19px!important;
}

.wifi-network-switch .wifi-toggle .item-title {
	padding-left: 30px!important;
}

.wifi-network-switch .wifi-info-icon{
	bottom: 2.5px!important;

}
.wifi-network-list {
	overflow: hidden;
}
.wifi-network-list .item-inner {
	padding-right: 15px!important;
	background-image: none!important;
}
.wifi-network-list ul {
	padding-left: 0!important;
}

.wifi-network {
	width: 100%;
}

.wifi-network-info {
	display:inline-block;
}
.wifi-icon {
	width: 18px;
	height: 15px;
	top:1px;
	bottom: 0px;
	position:relative;
	right: 10px;
}

.wifi-icon-animation {
	-webkit-animation: fade 1s;
    animation: fade 1s;
}



.wifi-icon-no-show {
	/*opacity:;*/
/*	-webkit-animation: fadeOut 1s;
    animation: fadeOut 1s;*/
	display:none;
	/*visibility: hidden;*/
  	/*opacity: 0;*/
	/*transition: opacity 1s ease;*/
}

.wifi-info-icon i{
	bottom: 2.5px;
	font-size: 22px;
}
.info-icon {
	bottom: 2.5px;
}
.lock-icon {
	width: 11px;
	height: 11px;
	position:relative;
	right: 22px;
	bottom:2px;
}

.pencil-icon {
		width: 16px;
	height: 16px;
	position:relative;
	right: 22px;
	/*bottom: 2px;*/
}

.timeline {
	margin-top: 25px;
}
.timeline-item-date {
	color: #6d6d72!important;
	/*width: 100px;*/
}

/*.timeline-sides .timeline-item-right {
	margin-left: calc(50% - (30px + 10px)/ 2 - 50px);
}*/

.date {
	text-align: center;
	font-size:17px;
	font-weight:600;
	margin-top: 25px;
	color: #6d6d72!important;
/*	background-color: #ccc;
	padding-top: 10px;
	padding-bottom:10px;*/
}

/*.ui-marquee {
	width: 80%;
}*/
/* Make it a marquee */
.marquee {
	width: 80%;
    margin: 0 auto;
    margin-right: 5%;
    margin-left: 0;
    white-space: nowrap;
    overflow: hidden;
}

.marquee span {
    display: inline-block;
    padding-left: 100%;
    animation: marquee 10s linear infinite;
}

/* Make it move */
@keyframes marquee {
    0%   { transform: translate(0, 0); }
    100% { transform: translate(-100%, 0); }
}

@-webkit-keyframes fadeIn {
    from { opacity: 0; }
      to { opacity: 1; }
}  
@keyframes fadeIn {
    from { opacity: 0; }
      to { opacity: 1; }
}


@-webkit-keyframes fadeOut {
    from { opacity: 1; }
      to { opacity: 0; }
}  

@keyframes fadeOut {
    from { opacity: 1; }
      to { opacity: 0; }
}


@keyframes fade {
  0%,100% { opacity: 0.70 }
  50% { opacity: 1 }
}



.editing-mode-text {
	float: right;
}
.product-network {
	position:relative;
	bottom: 10px;
	padding-left: 29px;
	height: 20px;
	display: block;
	transition: all 0.5s ease;
}
.product-text {
	font-size: 18px;
}

.powered-by-text {
	font-size: 9px;
	text-transform: uppercase;
	line-height: 1.0;
	position:relative;
	left:1px;
}

.footer-text {
	text-align: center;
}

#wifi-top {
	fill: #bbbbbb;
}

.home-back {
	position: relative;
	left: 10px;
}


input,
textarea,
[contenteditable] {
	outline: 0;
    -webkit-user-select: text!important;
    user-select: text;
}

